tests/parser/tests/cases/should_fail/unclosed_set_literal/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:6
1 |   k := { 1,
  |        ^ here
  = note: Encountered unclosed delimiter `{`, consider adding a `}` after inner expression 
